# disturb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  test_shebang.disturb
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_combined.urb  bench_fma.urb  bench_sum_dot.urb  bench_vec_arith.urb  bench_vec_bitwise.urb  bench_vec_cmp.urb  benchmark.sh
docs/: FUNCTION_REFERENCE.md  README_TCC.md  REF_SHEET.md
docs/release-legal/: README.md  THIRD_PARTY_NOTICES.md
example/: args.urb  asm_lib.disturb  asm_lib.urb  bytes.disturb  bytes.urb  bytes.vm  control_flow.disturb  control_flow.urb  control_flow.vm  example.disturb  example.urb  example.vm  ffi.urb  ffi_abi_cstr.urb  ffi_auto_compile_optional.urb  ffi_callback_struct.urb  ffi_callbacks_varargs_buffers.urb  ffi_fnptr_fields.urb  ffi_load_compat_lambda.urb  ffi_pointer_depth.urb  ffi_printf.urb  ffi_struct_pointer_new.urb  ffi_union.urb  ffi_view_struct.urb  fib.disturb  functions.disturb  functions.urb  functions.vm  gc_manual.disturb  indexing.disturb  indexing.urb  indexing.vm  io_eval.urb  io_eval.vm  locals.disturb  locals.urb  loop.disturb  loop.urb  meta.disturb  meta.urb  (+20 more)
example/guide/: 01_intro.disturb  01_intro.urb  02_types_literals.disturb  02_types_literals.urb  03_indexing_objects.disturb  03_indexing_objects.urb  04_operators_truthiness.disturb  04_operators_truthiness.urb  05_functions_methods.disturb  05_functions_methods.urb  06_control_flow.disturb  06_control_flow.urb  07_strings_bytes_io_eval.disturb  07_strings_bytes_io_eval.urb  08_vm_notes.disturb  08_vm_notes.urb  09_metaprogramming.disturb  09_metaprogramming.urb  10_strict_mode.disturb  10_strict_mode.urb  11_ffi_system.disturb  11_ffi_system.urb  12_references_and_copy.disturb  12_references_and_copy.urb  13_manual_gc.disturb  13_modules_packages.urb  14_ffi_struct_views_bind.urb  15_ffi_callbacks_varargs_buffers.urb  16_ffi_unions.urb
example/raylib/: audio_module_playing.urb  audio_music_stream.urb  audio_sound_loading.urb  audio_sound_multi.urb  core_2d_camera.urb  core_2d_camera_mouse_zoom.urb  core_2d_camera_split_screen.urb  core_basic_screen_manager.urb  core_basic_window.urb  core_clipboard_text.urb  core_delta_time.urb  core_highdpi_demo.urb  core_highdpi_testbed.urb  core_input_actions.urb  core_input_gamepad.urb  core_input_gestures.urb  core_input_keys.urb  core_input_mouse.urb  core_input_mouse_wheel.urb  core_input_multitouch.urb  core_input_virtual_controls.urb  core_keyboard_testbed.urb  core_monitor_detector.urb  core_random_sequence.urb  core_random_values.urb  core_render_texture.urb  core_scissor_test.urb  core_smooth_pixelperfect.urb  core_storage_values.urb  core_text_file_loading.urb  core_viewport_scaling.urb  core_window_flags.urb  core_window_letterbox.urb  core_window_should_close.urb  shapes_basic_shapes.urb  shapes_bouncing_ball.urb  shapes_circle_sector_drawing.urb  shapes_collision_area.urb  shapes_colors_palette.urb  shapes_dashed_line.urb  (+41 more)
examples/: asm_lib.urb  bytes.urb  control_flow.urb  ffi.urb  ffi_abi_cstr.urb  ffi_auto_compile_optional.urb  ffi_callback_struct.urb  ffi_callbacks_varargs_buffers.urb  ffi_fnptr_fields.urb  ffi_load_compat_lambda.urb  ffi_pointer_depth.urb  ffi_printf.urb  ffi_struct_pointer_new.urb  ffi_union.urb  fib.urb  functions.urb  import_markdown.urb  import_markdown_module.md  io_eval.urb  loop.urb  math_vectors.urb  mdisturb_demo.md  meta.urb  methods.urb  operators.urb  papagaio_preprocess_macro.urb  papagaio_preprocess_options_optional.urb  scientific_notation.urb  tcc.urb  value_meta.urb
examples/guide/: 01_intro.urb  02_types_literals.urb  03_indexing_objects.urb  04_operators_truthiness.urb  05_functions_methods.urb  07_strings_bytes_io_eval.urb  08_vm_notes.urb  09_metaprogramming.urb  11_ffi_system.urb  12_references_and_copy.urb  13_modules_packages.urb  14_ffi_struct_views_bind.urb  15_ffi_callbacks_varargs_buffers.urb  16_ffi_unions.urb
examples/import_markdown_pkg/: import_markdown_pkg.md
examples/libs/: mdisturb.urb  tcc.urb
examples/obsidian-plugin/: README.md  main.js  manifest.json  output-modal.js
examples/papagaio-obsidian/: README.md  main.js  manifest.json  output-modal.js
examples/web/: README.md  index.html
include/: asm.h  bytecode.h  gpu.h  host_io.h  papagaio.h  papagaio_internal.h  regex.h  regex_flags.h  urb.h  urb_bridge.h  urb_runtime.h  vm.h
lib/: raylib.urb  tcc.urb  urb.h
lib/libregexp/: cutils.c  cutils.h  libregexp.c
lib/raylib/: raylib.urb
libs/: tcc.urb
libs/libregexp/: libregexp.c
modules/tcc/: tcc.urb
src/: asm.c  bytecode.c  cli.c  ffi.c  functions.c  gpu.c  host_io.c  papagaio.c  papagaio_wasm.c  parallel.c  parallel.h  simd_ops.h  syntax.c  urb_bridge.c  urb_runtime.c  vm.c
src/papagaio-obsidian/: README.md  main.js  manifest.json
tests/: bench.sh  bench_keyintern_regression.sh  run.sh  run_examples.sh  run_examples_urb.sh  run_raylib_examples.sh  run_urb.sh
tests/asm/: expected.asm  input.asm
tests/bench/: big.asm  big.disturb  deep.c  deep.disturb  deep.js  deep.lua  deep.py  literal.c  literal.disturb  literal.js  literal.lua  literal.py  literal_c  loop.c  loop.js  loop.lua  loop_c  string.c  string.disturb  string.js  string.lua  string.py
tests/cases/: asm.disturb  asm.urb  basic.disturb  basic.urb  bytes.disturb  bytes.urb  call_local_lambda.urb  cli_args.urb  control_flow.disturb  control_flow.urb  equality.disturb  equality.urb  ffi_advanced_structs.urb  ffi_auto_compile.urb  ffi_baixa.urb  ffi_buffers_strings.urb  ffi_callbacks.urb  ffi_const_views.urb  ffi_ergo.urb  ffi_fnptr_fields.urb  ffi_fnptr_sig.urb  ffi_global.urb  ffi_media.urb  ffi_memory_ops.urb  ffi_open_sym_bind.urb  ffi_safety.urb  ffi_tcc_compile_eval.urb  ffi_tcc_unavailable.urb  ffi_typedef_enum_define.urb  ffi_union.urb  ffi_varargs.urb  ffi_view_struct.disturb  ffi_view_struct.urb  functions.disturb  functions.urb  indexing.disturb  indexing.urb  keyintern_toggle.urb  locals.urb  markdown_parser.urb  (+37 more)
tests/expected/: asm.out  basic.out  (+26 more)
tmp/: bool_test.urb  str_bool.urb  truth_test.urb
(+53 files in other folders)
